--- a/app/src/main/res/layout/activity_num_parejas.xml
+++ b/app/src/main/res/layout/activity_num_parejas.xml
@@ -28,7 +28,7 @@
             android:ems="10"
             android:fontFamily="@font/alfa_slab_one"
             android:inputType="textPersonName"
-            android:text="Seleccione el número de personas"
+            android:text="@string/Seleccione_numero_personas"
             android:textAlignment="center" />
 
         <Space
@@ -59,18 +59,18 @@
                 android:orientation="vertical">
 
                 <Button
-                    android:id="@+id/button3"
+                    android:id="@+id/btMayor"
                     style="@style/Base.Widget.AppCompat.Button.Colored"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Button" />
+                    android:text="@string/Mayor" />
 
                 <Button
-                    android:id="@+id/button2"
+                    android:id="@+id/btMenor"
                     style="@style/Base.Widget.AppCompat.Button.Colored"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Button" />
+                    android:text="@string/Menor" />
             </LinearLayout>
         </LinearLayout>
 
@@ -80,14 +80,14 @@
             android:layout_weight="1" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/ContinuarNumP"
             style="@style/Base.Widget.AppCompat.Button.Colored"
             android:layout_width="match_parent"
             android:layout_height="215dp"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:text="Button"
+            android:text="@string/Continuar"
             android:textSize="18sp" />
     </LinearLayout>
 
