--- a/app/src/main/res/layout/activity_num_parejas.xml
+++ b/app/src/main/res/layout/activity_num_parejas.xml
@@ -16,41 +16,38 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="@font/alfa_slab_one"
+            android:text="@string/Seleccione_numero_personas"
+            android:textAlignment="center"
+            android:textSize="30sp" />
+
         <Space
             android:layout_width="match_parent"
             android:layout_height="39dp"
             android:layout_weight="1" />
 
-        <EditText
-            android:id="@+id/editText2"
-            android:layout_width="match_parent"
-            android:layout_height="76dp"
-            android:ems="10"
-            android:fontFamily="@font/alfa_slab_one"
-            android:inputType="textPersonName"
-            android:text="@string/Seleccione_numero_personas"
-            android:textAlignment="center" />
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="53dp"
-            android:layout_weight="1" />
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="108dp"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/editText"
-                android:layout_width="match_parent"
+                android:id="@+id/numParejas"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:ems="10"
                 android:inputType="number"
-                android:textSize="36sp" />
+                android:textAlignment="center"
+                android:textSize="56sp"
+                tools:text="4" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -80,7 +77,7 @@
             android:layout_weight="1" />
 
         <Button
-            android:id="@+id/ContinuarNumP"
+            android:id="@+id/continuar"
             style="@style/Base.Widget.AppCompat.Button.Colored"
             android:layout_width="match_parent"
             android:layout_height="215dp"
